--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             </iframe>
         </section>
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Logo Home"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="Logo Youtube"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="Logo Github"></a> <br>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Logo Home"></a> <br>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="Logo Youtube"></a> <br>
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="Logo Github"></a> <br>
             <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Logo Instagram"></a> <br>
             <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Logo Twitter"></a> <br>
             <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Logo Facebook"></a>
